src/objects/ConfigurazioneGeolocalizzazione__mdt.object
<CustomObject>
    <fields>
        <fullName>CityField__c</fullName>
        <label>City Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryField__c</fullName>
        <label>Country Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeocodingAddressFormat__c</fullName>
        <label>Geocoding Address Format</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ar</fullName>
                    <label>Arabic</label>
                </value>
                <value>
                    <fullName>nl</fullName>
                    <label>Dutch</label>
                </value>
                <value>
                    <fullName>de</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>en</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>en-GB</fullName>
                    <label>English (Great Britain)</label>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>it</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>pt</fullName>
                    <label>Portuguese</label>
                </value>
                <value>
                    <fullName>es</fullName>
                    <label>Spanish</label>
                </value>
                <value>
                    <fullName>ru</fullName>
                    <label>Russian</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GeocodingStatusField__c</fullName>
        <label>Geocoding Status Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastGeocodingAttemptDateField__c</fullName>
        <label>Last Geocoding Attempt Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastGeocodingDateField__c</fullName>
        <label>Last Geocoding Date Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NormalizedAdministrativeAreaLv1__c</fullName>
        <label>Normalized Administrative Area (lv. 1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NormalizedAdministrativeAreaLv2__c</fullName>
        <label>Normalized Administrative Area (lv. 2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NormalizedCityField__c</fullName>
        <label>Normalized City Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NormalizedCountryCodeField__c</fullName>
        <label>Normalized Country Code Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NormalizedFullAddressField__c</fullName>
        <label>Normalized Full Address Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NormalizedLatitudeField__c</fullName>
        <label>Normalized Latitude Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NormalizedLongitudeField__c</fullName>
        <label>Normalized Longitude Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NormalizedStreetField__c</fullName>
        <label>Normalized Street Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NormalizedStreetNumberField__c</fullName>
        <label>Normalized Street Number Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NormalizedZipcodeField__c</fullName>
        <label>Normalized Zipcode Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectAPIName__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StreetField__c</fullName>
        <label>Street Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipcodeField__c</fullName>
        <label>Zipcode Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Configurazione Geolocalizzazione</label>
    <pluralLabel>Configurazione Geolocalizzazioni</pluralLabel>
</CustomObject>